# pix

./: .gitignore  CLAUDE.md  README.md  TODO.md  fix_css.sh  package-lock.json  package.json  pi-session-2026-06-02T18-38-20-943Z_019e89a1-290f-714d-80c7-7669c94caa3d.html  tsconfig.json
.github/workflows/: check.yml  pr-check.yml  publish.yml
apps/desktop-tauri/: .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/icons/: .gitkeep
apps/desktop-tauri/src-tauri/src/: desktop_state.rs  history.rs  lib.rs  main.rs  pty.rs  sidecar.rs
apps/tui-rust/: .gitignore  Cargo.toml  README.md
apps/tui-rust/src/: bridge_event.rs  cli.rs  lib.rs  main.rs  runtime.rs
apps/tui-rust/src/bridge/: client.rs  mod.rs  protocol.rs  sidecar.rs
apps/tui-rust/src/config/: default.rs  loader.rs  mod.rs  types.rs
apps/tui-rust/src/ui/: app.rs  attachments.rs  autocomplete.rs  clipboard.rs  clipboard_image.rs  context_bar.rs  enhancer.rs  file_link_opener.rs  input_editor.rs  links.rs  markdown.rs  mod.rs  model_picker.rs  mouse.rs  popup.rs  render.rs  scroll.rs  session_list.rs  session_search.rs  slash.rs  subagents_view.rs  syntax.rs  tabs_state.rs  theme.rs  toast.rs  todo_view.rs  tool_renderers.rs  viewport.rs  voice.rs  voice_stub.rs  workspace_history.rs  wrap.rs
apps/tui-rust/tests/: bridge_smoke.rs
docs/: concurrency.md  release.md
extensions/question/: contract.ts  index.ts  render.ts  result.ts  tui.ts
schemas/: pi-tools-suite.json  pix.json
scripts/: capture-readme-screenshots.ts  generate-schemas.ts  publish.sh  smoke-test-package.sh  sync-pi-tools-suite.mjs  sync-sdk-pin.mjs  tui-rust-watch.ts
specs/: 00-overview.md  01-antigravity-auth.md  02-async-subagents.md  02-telegram-mirror.md  03-dcp.md  04-lsp-trust.md  06-openai-codex-usage-refresh.md
src/: config.ts  context-progress-bar.ts  default-pix-config.ts  fuzzy.ts  icon-theme.ts  input-editor-files.ts  input-editor.ts  main.ts  markdown-format.ts  sdk.ts  syntax-highlight.ts  terminal-width.ts  theme.ts  ui.ts
tests/: app-internal-clipboard.test.ts  app-supercompact-tools.test.ts  auto-thinking.test.ts  autocomplete-controller.test.ts  blink-controller.test.ts  bundled-question-extension.test.ts  bundled-terminal-bell.test.ts  cli.test.ts  clipboard.test.ts  command-model-actions.test.ts  command-registry.test.ts  command-runtime.test.ts  config.test.ts  context-progress-bar.test.ts  conversation-entry-renderer.test.ts  conversation-shell-renderer.test.ts  conversation-tool-renderer.test.ts  conversation-viewport-scroll.test.ts  dcp-stats.test.ts  editor-layout-renderer.test.ts  extension-actions-controller.test.ts  extension-event-bus.test.ts  extension-ui-controller.test.ts  file-links.test.ts  fuzzy.test.ts  guards.test.ts  icons.test.ts  input-action-controller.test.ts  input-controller.test.ts  input-editor.test.ts  input-paste-handler.test.ts  install.test.ts  interactive-pix.test.ts  lazy-session-manager.test.ts  logger.test.ts  markdown-format.test.ts  menu-items-controller.test.ts  message-content.test.ts  model-catalog.test.ts  model-ref.test.ts  (+52 more)
(+245 files in other folders)
