[package]
name = "pix-tui"
version = "0.1.0"
edition = "2021"
description = "Rust port of the pix terminal UI for the Pi coding agent"
publish = false

[features]
default = []
voice = ["dep:rust-vosk", "dep:cpal", "dep:zip", "dep:ureq"]

[[bin]]
name = "pix-tui"
path = "src/main.rs"

[dependencies]
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
unicode-width = "0.2"
dirs = "5"
base64 = "0.22"
once_cell = "1"
arboard = "3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
syntect = { version = "5", default-features = false, features = ["parsing", "regex-onig", "default-syntaxes", "default-themes"] }
rust-vosk = { package = "vosk", version = "0.3.1", optional = true }
cpal = { version = "0.15", optional = true }
zip = { version = "2", optional = true }
ureq = { version = "2", optional = true }

[dev-dependencies]
assert_cmd = "2"
serial_test = "3"
