[package]
name = "pix-desktop"
version = "0.0.1"
description = "Pix Desktop — Tauri UI for the Pi coding agent"
authors = ["pi-ui-extend"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "pix_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSToolbar", "NSWindow"] }

[profile.dev]
opt-level = 0
debug = 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
